# TDigiTES

./: .gitignore  CMakeLists.txt  PHA.conf  PSD.conf  PSD.conf.bu  QDC.conf  README.md  Slave.conf  WaveForm.conf  Waveform.conf  bu.cpp  digiTES_Config.txt  fineTS.cpp  main.cpp  pa.cpp  test.cpp
include/: BoardUtils.h  Configure.h  Console.h  ErrorCodeMap.hpp  ParamParser.h  TDataTaking.hpp  TDigiTes.hpp  TPHA.hpp  TPHAData.hpp  TPSD.hpp  TPSDData.hpp  TQDC.hpp  TWaveForm.hpp  TWaveFormData.hpp  TWaveform.hpp  TWaveformData.hpp  TreeData.h  digiTES.h
src/: BoardUtils.cpp  Configure.cpp  Console.cpp  ParamParser.cpp  TDataTaking.cpp  TDigiTes.cpp  TPHA.cpp  TPSD.cpp  TQDC.cpp  TWaveForm.cpp  TWaveform.cpp  digiTES.cpp
